--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,29 @@
-dlib==19.24.6
+alembic==1.16.4
+blinker==1.9.0
+click==8.2.1
+cmake==4.1.0
+distro==1.9.0
+dlib==20.0.0
 dnspython==2.7.0
-numpy==2.2.3
-opencv-python==4.11.0.86
-pymongo==4.11.1
-Flask==3.0.3
-Flask-Cors==4.0.1
-python-dotenv==1.0.1
-SQLAlchemy==2.0.32
-alembic==1.13.2
-opencv-python==4.10.0.84
-numpy==1.26.4
-dlib==19.24.6
-cmake
+Flask==3.1.2
+flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+PyJWT==2.10.1
+pymongo==4.14.1
+python-dotenv==1.1.1
+scikit-build==0.18.1
+setuptools==80.9.0
+SQLAlchemy==2.0.43
+typing_extensions==4.14.1
+Werkzeug==3.1.3
+wheel==0.45.1
