--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ env/
 .history/
 .vscode/
 
+# Node.js
+frontend/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+*.tgz
+package-lock.json
+yarn.lock
+.next/
+out/
